[gd_scene load_steps=16 format=3 uid="uid://c0cfdjpbjws7q"]

[ext_resource type="Script" path="res://Scripts/Classes/Tower.gd" id="1_7mi4n"]
[ext_resource type="Texture2D" uid="uid://c4y70gfoxoyx" path="res://Textures/grug.png" id="2_jg8fi"]
[ext_resource type="Texture2D" uid="uid://sgwup50wrm4r" path="res://Textures/Tower Textures/mulltiShot.png" id="3_8rnt0"]

[sub_resource type="SphereShape3D" id="SphereShape3D_etvmx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ywy31"]
albedo_texture = ExtResource("2_jg8fi")
uv1_scale = Vector3(3, 3, 3)

[sub_resource type="SphereMesh" id="SphereMesh_qputw"]
material = SubResource("StandardMaterial3D_ywy31")

[sub_resource type="BoxShape3D" id="BoxShape3D_03ka2"]
size = Vector3(1.8, 0.001, 1.8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q2bac"]
transparency = 1
albedo_color = Color(1, 1, 1, 0)

[sub_resource type="BoxMesh" id="BoxMesh_icd1f"]
material = SubResource("StandardMaterial3D_q2bac")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_agfrn"]
transparency = 1
cull_mode = 2
shading_mode = 0
albedo_color = Color(0.298, 1, 0.245, 0.6)

[sub_resource type="CylinderMesh" id="CylinderMesh_5srkt"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_agfrn")
flip_faces = true
top_radius = 4.5
bottom_radius = 5.0
height = 0.05
cap_top = false
cap_bottom = false

[sub_resource type="CylinderShape3D" id="CylinderShape3D_owd2w"]
resource_local_to_scene = true
height = 1.5

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_pg0e1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jdrx5"]
albedo_color = Color(1, 1, 0, 1)
emission_enabled = true
emission = Color(1, 1, 0, 1)
emission_energy_multiplier = 6.05
clearcoat_enabled = true
backlight = Color(0.0347847, 0.532601, 1, 1)
backlight_texture = SubResource("NoiseTexture2D_pg0e1")

[sub_resource type="SphereMesh" id="SphereMesh_ti18x"]
material = SubResource("StandardMaterial3D_jdrx5")
radius = 0.1
height = 0.2

[node name="MultiTower" type="Node3D"]
script = ExtResource("1_7mi4n")
tower_name = "MultiTower"
damage = 2
atk_speed = 0.5
atk_range = 7.0
towerCost = 5
upgrades = [[["Damage", "Attack Speed"], [4, 0.5]], [["Attack Speed", "Range", "Damage"], [0.5, 1, 1]], [["Range", "Damage"], [2, 2]], [["Range"], [3]], [["Range"], [2]]]
upgrade_cost = [50, 32, 16, 10, 4]

[node name="Model" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.44, 0)
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Model"]
shape = SubResource("SphereShape3D_etvmx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Model/CollisionShape3D"]
mesh = SubResource("SphereMesh_qputw")

[node name="PlacementDenial" type="Area3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.44, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Model/PlacementDenial"]
shape = SubResource("BoxShape3D_03ka2")

[node name="AreaPlaceableIndicator" type="MeshInstance3D" parent="Model/PlacementDenial/CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.443072, 0)
visible = false
mesh = SubResource("BoxMesh_icd1f")

[node name="RangeIndicator" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_5srkt")

[node name="DetectUnitArea" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 4
input_ray_pickable = false

[node name="DetectUnitCollisionShape" type="CollisionShape3D" parent="DetectUnitArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_owd2w")

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="Upgrade Indicator" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75998, 0)
visible = false
mesh = SubResource("SphereMesh_ti18x")
skeleton = NodePath("")

[node name="Tower Type Indicator" type="Sprite3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 1.33631, 0)
billboard = 1
texture = ExtResource("3_8rnt0")

[connection signal="input_event" from="Model" to="." method="_on_model_input_event"]
[connection signal="mouse_entered" from="Model" to="." method="_on_model_mouse_entered"]
[connection signal="mouse_exited" from="Model" to="." method="_on_model_mouse_exited"]
